bug: height on mobile devices --fixed

--- a/style.css
+++ b/style.css
@@ -19,12 +19,14 @@ html {
   font-family: var(--font);
   font-size: 16px;
   color: var(--primary-white);
+  height: -webkit-fill-available;
 }
 
 body {
   box-sizing: border-box;
   background-color: var(--secondary-main-bg);
-  height: 100vh;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
   display: flex;
   flex-direction: column;
   align-items: center;
